fixed margin alignment+finished Più di 500.000 sec

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,7 @@ header::after {
     margin: auto;
     margin-top: 10%;
     margin-bottom: -8%;
-    /* border: 1px dotted red; */
+    border: 1px dotted red;
 }
 
 .standard-section::after {
@@ -363,9 +363,9 @@ label {
 }
 
 .business-card {
-    width: calc(100% / 3 - 3%);
+    width: calc(100% / 3 - 6.3%);
     display: inline-block;
-    margin: 1.3%;
+    margin: 3%;
 }
 
 .card-image {
@@ -381,4 +381,9 @@ label {
     margin-top: 2%;
     font-size: 0.8rem;
     line-height: 1.3rem;
+}
+
+.about-users {
+    margin: 3%;
+    color: #0061ff;
 }
